# burning-handsign

./: .gitignore  Cargo.toml  README.md  justfile  log4rs.yaml
scripts/: alt_convert.py  forge.sh  forge0.sh  forge1.sh  forge2.sh  forge3.sh  forge4.sh  prep.sh  pyproject.toml  to_onnx.py
src/: claps.rs  dataset.rs  main.rs  model.rs  server.rs
src/model/: batcher.rs  metric.rs  normalizer.rs  single_twin_model.rs
src/server/: model.rs
static/: main.css  main.js
templates/: view.html
