[package]
name = "burning-handsign"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.16.0", features = ["train", "vision", "tch"] }
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
tap = "1.0.1"
log = "0.4.27"
derive-new = "0.7.0"
clap = { version = "4.5.38", features = ["derive"] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tokio = { version = "1.45.1", features = ["full"] }
tera = "1.20.0"
log4rs = "1.3.0"
tower-http = { version = "0.6.4", features = ["fs"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
